--- a/workshops/workshop-2/package.json
+++ b/workshops/workshop-2/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.9",
+    "@types/react": "^16.9.5",
+    "classnames": "^2.2.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
